# Drone-UAV

./: .gitignore  CMakeLists.txt  LLMContext.md  README.md  upload.sh
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/hardware_test/: CMakeLists.txt  blink_led.c  pwm.c  rx.c  tx.c  uart_pico.c  uart_zero.c
devices/: CMakeLists.txt  CMakelists.txt
devices/controller/: CMakeLists.txt  drone_controller_interface.h
devices/controller/DualShock/: CMakeLists.txt  dualshock_device.c  dualshock_device.h  dualshock_utils.h
devices/imu/: CMakeLists.txt
devices/imu/MPU-6050/: CMakeLists.txt  mpu6050_device.c  mpu6050_device.h  mpu6050_utils.c  mpu6050_utils.h
devices/lora/: CMakeLists.txt
devices/lora/sx1278/: CMakeLists.txt  sx1278_device.c  sx1278_device.h  sx1278_utils.c  sx1278_utils.h
devices/lora/sx1278/older code/: sx1278_device.c  sx1278_utils.c
docs/: GitUsage.md  InterfaceExample.md  Setup.md  Specs.md
hal/: CMakeLists.txt  hal_gpio.h  hal_i2c.h  hal_spi.h  hal_time.h  hal_uart.h
include/: coordinate.h
older-code/: utils.c  utils.h
src/devices/: Makefile  utils.c  utils.h
src/devices/Controllers/: drone_controller_interface.h
src/devices/Controllers/DualShock/: Makefile  dualshock_device.c  dualshock_device.h  dualshock_utils.c  dualshock_utils.h
src/devices/GameController/: controller_interface.h
src/devices/GameController/DualShock/: Makefile  dualshock_device.h  dualshock_utils.c  dualshock_utils.h
src/devices/IMU/: Specifications.md  imu_interface.h
src/devices/IMU/MPU-6050/: Makefile  Specifications.md  mpu6050_device.c  mpu6050_device.h  mpu6050_utils.c  mpu6050_utils.h
src/devices/LoRa/: Makefile  Specifications.md  lora_interface.h  rx.c  tx.c
src/devices/LoRa/sx1278/: Makefile  Specifications.md  mySX1278.c  mySX1278.h  sx1278_device.c  sx1278_device.h  sx1278_utils.c  sx1278_utils.h
tests/: CMakeLists.txt  Makefile  README.md  TestPlan.md  build_tests.py  commandline_tests.py  commandline_tests.sh  config.py  device_tests.py  integration_tests.sh  intergration_tests.py  run_tests.py  run_tests.sh  runner.py  test_config.sh  test_utils.sh  unit_test.sh
tests/configs/: ci.config  config_base.py  config_controller.py  config_receiver.py  config_reciver.py  dev_mode.config  hardware.config
tests/devices/: Makefile  unittest_dualshock.c  unittest_mpu6050.c  unittest_mySX1278.c  unittest_sx1278.c
tests/expected/: i2c_tools_installed.out  iic_enabled.out  mpu6050_connected.out  mpu6050_i2c_connection.out  pigpio_installed.out  spi_enabled.out
tests/intergration/: CMakeLists.txt  unittest_dualshock.c  unittest_mpu6050.c  unittest_sx1278.c
toolchains/: host.cmake  raspberry_pi.cmake  raspberry_pi_five.cmake  raspberry_pi_zero.cmake  stm32.cmake
