cmake_minimum_required(VERSION 3.22)
project(DroneUAV C)

add_subdirectory(devices)
add_subdirectory(hal)
add_subdirectory(platforms)
add_subdirectory(apps)
add_subdirectory(tests)

if(NOT DEFINED PLATFORM)
    message(FATAL_ERROR "You must specify a PLATFORM, e.g., -DPLATFORM=STM32")
endif()

if(PLATFORM STREQUAL "STM32")
    list(APPEND SRC platform/stm32/hal_gpio.c src/platform/stm32/hal_i2c.c src/platform/stm32/hal_spi.c)
elseif(PLATFORM STREQUAL "RaspberryPi")
    list(APPEND SRC platform/raspberrypi/hal_gpio_pigpio.c src/platform/raspberrypi/hal_i2c_pigpio.c src/platform/raspberrypi/hal_spi_pigpio.c)
else()
    message(FATAL_ERROR "Unknown platform: ${PLATFORM}")
endif()