add_executable(tx tx.c)
add_executable(rx rx.c)
add_executable(blink_led blink_led.c)
add_executable(pwm pwm.c)

target_link_libraries(tx PRIVATE sx1278 platform_hal)
target_link_libraries(rx PRIVATE sx1278 platform_hal)
target_link_libraries(blink_led PRIVATE platform_hal)
target_link_libraries(pwm PRIVATE platform_hal)
# Generate additional output formats for Pico (when building for Pico platform)
if(PLATFORM STREQUAL "RaspberryPiPico")
    # Set output name with .elf extension
    set_target_properties(tx PROPERTIES OUTPUT_NAME "tx.elf")
    set_target_properties(rx PROPERTIES OUTPUT_NAME "rx.elf")
    set_target_properties(blink_led PROPERTIES OUTPUT_NAME "blink_led.elf")
    set_target_properties(pwm PROPERTIES OUTPUT_NAME "pwm.elf")
    pico_add_extra_outputs(tx)
    pico_add_extra_outputs(rx)
    pico_add_extra_outputs(blink_led)
    pico_add_extra_outputs(pwm)
endif()